--- a/src/public/css/Partner/Form.css
+++ b/src/public/css/Partner/Form.css
@@ -57,3 +57,35 @@ form .form-right {
   color: var(--white);
   inset: 0;
 }
+
+@media screen and (min-width: 700px) and (max-width: 1024px) {
+  form .form-left {
+    margin-left: 0px;
+  }
+  .section-header img {
+    display: none;
+  }
+
+  .section-header p {
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: 500;
+  }
+}
+
+@media screen and (max-width: 699px) {
+  form .form-left {
+    margin-left: 0px;
+  }
+  .section-header img {
+    display: none;
+  }
+  .section-header p {
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: 500;
+  }
+  .form-right img {
+    display: none;
+  }
+}
