--- a/src/public/css/Partner/Reviews.css
+++ b/src/public/css/Partner/Reviews.css
@@ -9,9 +9,9 @@
 }
 
 .header p {
-  margin-top: -30px;
-  margin-left: 35px;
+  margin: 0;
 }
+
 .cards {
   grid-column: 1 / span 12;
   margin-top: 50px;
@@ -79,8 +79,72 @@
 }
 
 @media screen and (min-width: 700px) and (max-width: 1024px) {
-  .review-section .grid-main {
+  div.review-section {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .header {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .review-section .header p {
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: 500;
+  }
+
+  .review-section .header img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 699px) {
+  div .review-section {
+    display: flex;
+    flex-direction: column;
+  }
+  .header {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .review-section .header p {
+    font-size: 2.5rem;
+    font-weight: 500;
+  }
+  .review-section .header img {
+    display: none;
+  }
+
+  .review-card img {
+    min-width: 100px;
+    min-height: 100px;
+    width: 10.5vw;
+    height: 20vw;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 43px;
+  }
+
+  .review-card {
+    margin-right: 20px;
+  }
+
+  .customer-review {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 80%;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
