--- a/src/public/css/About/Client.css
+++ b/src/public/css/About/Client.css
@@ -6,13 +6,16 @@
 }
 
 .client-header {
-  grid-column: 6 / span 2;
-  font-size: 2.5em;
+  grid-column: 5 / span 4;
+  font-size: 2em;
 }
 
 .client-header p {
-  margin: -30px 0 0 30px;
+  margin: -30px 0 0 0;
   text-align: center;
+}
+.client-header > img:nth-child(1) {
+  margin-left: 190px;
 }
 
 .client-content {
@@ -32,13 +35,15 @@
   }
 
   .client-header p {
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-align: center;
     margin-top: -30px;
   }
-
-  .client-header img {
+  .client-header > img:nth-child(1) {
     margin-left: -35px;
+  }
+  .client-header > p:nth-child(2) {
+    margin-left: 0px;
   }
 
   .client-content {
@@ -57,11 +62,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 100px;
   }
 
   .client-header p {
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-align: center;
+    margin-top: -30px;
+    margin-left: 0;
   }
 
   .client-header img {
@@ -73,8 +81,8 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-    width: 50vw;
+    width: 70vw;
     margin-top: 30px;
-    font-size: 12px;
+    font-size: 1.8em;
   }
 }
