--- a/src/public/css/Partner/Form.css
+++ b/src/public/css/Partner/Form.css
@@ -1,5 +1,8 @@
 .contact-form {
-  margin-bottom: 100px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 1vw;
+  margin-top: 100px;
 }
 .section-header {
   grid-column: 5 / span 4;
@@ -8,12 +11,12 @@
 
 .section-header p {
   text-align: center;
-  font-size: 2.5em;
+  font-size: 2em;
   margin: -30px 0 0 0;
 }
 
 .section-header img {
-  margin-left: 85px;
+  margin-left: 175px;
 }
 
 .background-left {
