--- a/src/public/css/Partner/Reviews.css
+++ b/src/public/css/Partner/Reviews.css
@@ -1,15 +1,22 @@
 .review-section {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 1vw;
   margin-top: 100px;
 }
 
-.header {
+.review-header {
   grid-column: 5 / span 4;
-  font-weight: 500;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
-.header p {
-  margin: 0;
+.review-header p {
+  margin: -30px 0 0 0;
+
+  text-align: center;
+}
+.review-header > img:nth-child(1) {
+  margin-left: 130px;
 }
 
 .cards {
@@ -23,7 +30,6 @@
 
 .review-card {
   width: 42vw;
-  min-width: 38vw;
   min-height: 36vw;
   border-radius: 30px;
   box-shadow: -4px -4px 50px rgba(0, 0, 0, 0.04),
@@ -40,6 +46,7 @@
   margin-left: 50%;
   transform: translateX(-50%);
   margin-top: 43px;
+  margin-bottom: 20px;
 }
 .customer-img-blue {
   border: 4px solid var(--blue);
@@ -50,6 +57,8 @@
 .review-card p {
   width: 100%;
   text-align: center;
+  font-weight: 300;
+  line-height: 153%;
 }
 
 .customer-review {
@@ -86,21 +95,22 @@
     justify-content: center;
   }
 
-  .header {
+  .review-header {
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  .review-section .header p {
-    font-size: 2.5rem;
+  .review-section .review-header p {
+    font-size: 2rem;
     text-align: center;
-    font-weight: 500;
+    margin: 40px 0 0 -15px;
   }
 
-  .review-section .header img {
-    display: none;
+  .review-section .review-header img {
+    /* display: none; */
+    margin: 0;
   }
 }
 
@@ -109,18 +119,17 @@
     display: flex;
     flex-direction: column;
   }
-  .header {
+  .review-header {
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  .review-section .header p {
-    font-size: 2.5rem;
-    font-weight: 500;
+  .review-section .review-header p {
+    font-size: 2rem;
   }
-  .review-section .header img {
+  .review-section .review-header img {
     display: none;
   }
 
